# succinct-runner

./: .gitignore  README.md  package-lock.json  package.json
contracts/src/: GameScoreRecorder.sol
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
server/: package-lock.json  package.json  server.js  udo lsof -i :80  udo netstat -tulpn | grep :80
web/: index.html
web/css/: crypto-runner.css
web/js/: crypto-runner.js  server.js
