[package]
name = "pac-man-game-script"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
sp1-sdk = { version = "4.0.0", default-features = false }
sp1-zkvm = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
sha2 = "0.10"
bincode = "1.3"
actix-web = "4"

[build-dependencies]
sp1-build = "4.0.0"

[patch.crates-io]
p3-dft = { version = "0.2.0" }  # Thay bằng phiên bản chính thức